tests/vertical-slice/reject/cross_module_generic_fn_value/helpers.hew
pub fn first<T>(items: Vec<T>) -> T {
    items[0]
}
